--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,6 @@ hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=jdbc:mysql://pipelinedb.csxtszc8vmjr.ap-southeast-2.rds.amazonaws.com:3306/pipelinDB
 spring.datasource.username=root
 spring.datasource.password=farmED123UOW
+spring.security.user.name=root
+spring.security.user.password=password
 
