--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=5000
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 spring.datasource.driverclassname = com.mysql.cj.jdbc.Driver
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 spring.datasource.url=jdbc:mysql://pipelinedb.csxtszc8vmjr.ap-southeast-2.rds.amazonaws.com:3306/pipelinDB
